# distributed_key_value_store

./: README.md
Distributed_KV_Store_Client/: CMakeLists.txt  main.cpp
Distributed_KV_Store_Client/util/: ClientToMaster.cpp  ClientToMaster.h  ClientToServer.cpp  ClientToServer.h  JsonParser.h  TcpConnectionUtility.cpp  TcpConnectionUtility.h
Distributed_KV_Store_Master/: CMakeLists.txt  main.cpp
Distributed_KV_Store_Master/handleClient/: clientMainFunction.cpp  clientMainFunction.h
Distributed_KV_Store_Master/handleHeartbeat/: heartbeatMainFunction.cpp  heartbeatMainFunction.h
Distributed_KV_Store_Master/handleLocalCommand/: localCommandMainFunction.cpp  localCommandMainFunction.h
Distributed_KV_Store_Master/tests/: test_ConsistentHashingMap.cpp  test_KVStoreMap.cpp  test_clientMainFunction.cpp
Distributed_KV_Store_Master/util/: ConsistentHashingMap.cpp  ConsistentHashingMap.h  HashCalculator.h  KVStoreMap.cpp  KVStoreMap.h  Server.cpp  Server.h  SharedStringVector.cpp  SharedStringVector.h  TcpConnectionUtility.cpp  TcpConnectionUtility.h
Distributed_KV_Store_Server/: CMakeLists.txt  main.cpp
Distributed_KV_Store_Server/handleClient/: clientMainFunction.cpp  clientMainFunction.h
Distributed_KV_Store_Server/handleHeartbeat/: heartbeatMainFunction.cpp  heartbeatMainFunction.h
Distributed_KV_Store_Server/handleLocalCommand/: localCommandMainFunction.cpp  localCommandMainFunction.h
Distributed_KV_Store_Server/tests/: testDeleteFunction.cpp  testSendingReceivingDataBetweenTwoServers.cpp
Distributed_KV_Store_Server/util/: HashCalculator.h  JsonParser.cpp  JsonParser.h  KVMap.cpp  KVMap.h  Server.cpp  Server.h  TcpConnectionUtility.cpp  TcpConnectionUtility.h
